--- a/src/SE/Supervisor/Web/Resources/views/Process/log.html.twig
+++ b/src/SE/Supervisor/Web/Resources/views/Process/log.html.twig
@@ -3,7 +3,7 @@
     <div class="row clearfix">
         <div class="col-md-12 column">
             <div class="page-header">
-                <h3 id="log-title">Process A
+                <h3 id="log-title">{{ process.name }}
                     <span class ="pull-left">
                         <a href="{{ app.url_generator.generate('supervisor_index') }}">&laquo;</a>&nbsp;
                     </span>
